[gd_scene load_steps=22 format=2]

[ext_resource path="res://kitchen_scene/fridge/products/onion.tscn" type="PackedScene" id=1]
[ext_resource path="res://kitchen_scene/fridge/products/milk.tscn" type="PackedScene" id=2]
[ext_resource path="res://kitchen_scene/fridge/products/eggs.tscn" type="PackedScene" id=3]
[ext_resource path="res://kitchen_scene/fridge/products/lettuce.tscn" type="PackedScene" id=4]
[ext_resource path="res://kitchen_scene/fridge/products/sausages.tscn" type="PackedScene" id=5]
[ext_resource path="res://kitchen_scene/fridge/assets/background.png" type="Texture" id=6]
[ext_resource path="res://kitchen_scene/fridge/products/hot_dog_bread.tscn" type="PackedScene" id=7]
[ext_resource path="res://kitchen_scene/fridge/products/beef.tscn" type="PackedScene" id=8]
[ext_resource path="res://kitchen_scene/fridge/products/broccoli.tscn" type="PackedScene" id=11]
[ext_resource path="res://kitchen_scene/fridge/products/tomatoes.tscn" type="PackedScene" id=12]
[ext_resource path="res://kitchen_scene/fridge/products/pickles.tscn" type="PackedScene" id=13]
[ext_resource path="res://kitchen_scene/fridge/assets/fridge.gd" type="Script" id=14]
[ext_resource path="res://kitchen_scene/fridge/assets/tomatoes.png" type="Texture" id=16]
[ext_resource path="res://kitchen_scene/fridge/assets/sausages.png" type="Texture" id=17]
[ext_resource path="res://kitchen_scene/fridge/assets/milk.png" type="Texture" id=18]
[ext_resource path="res://kitchen_scene/fridge/assets/beef.png" type="Texture" id=19]
[ext_resource path="res://kitchen_scene/fridge/assets/eggs.png" type="Texture" id=20]
[ext_resource path="res://kitchen_scene/fridge/assets/pickles.png" type="Texture" id=21]
[ext_resource path="res://kitchen_scene/fridge/assets/lettuce.png" type="Texture" id=22]
[ext_resource path="res://kitchen_scene/fridge/assets/hot_dog_bread.png" type="Texture" id=23]
[ext_resource path="res://kitchen_scene/fridge/assets/onion.png" type="Texture" id=24]

[node name="Fridge" type="Node2D"]
position = Vector2( -2, -4 )
script = ExtResource( 14 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 803, 452 )
texture = ExtResource( 6 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Product" parent="Control" instance=ExtResource( 8 )]
margin_left = 317.0
margin_top = 300.0
margin_right = 560.0
margin_bottom = 378.0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 19 )
expand = false

[node name="Product2" parent="Control" instance=ExtResource( 11 )]
margin_left = 794.0
margin_top = 531.0
margin_right = 964.0
margin_bottom = 683.0
size_flags_horizontal = 1
size_flags_vertical = 1
expand = false

[node name="Product3" parent="Control" instance=ExtResource( 3 )]
margin_left = 1244.0
margin_top = 193.0
margin_right = 1483.0
margin_bottom = 387.0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 20 )
expand = false

[node name="Product4" parent="Control" instance=ExtResource( 7 )]
margin_left = 994.0
margin_top = 458.0
margin_right = 1129.0
margin_bottom = 683.0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 23 )
expand = false

[node name="Product5" parent="Control" instance=ExtResource( 4 )]
margin_left = 615.0
margin_top = 20.0
margin_right = 822.0
margin_bottom = 148.0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 22 )
expand = false

[node name="Product6" parent="Control" instance=ExtResource( 2 )]
margin_left = 1219.0
margin_top = 466.0
margin_right = 1344.0
margin_bottom = 739.0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 18 )
expand = false

[node name="Product7" parent="Control" instance=ExtResource( 1 )]
margin_left = 291.0
margin_top = 549.0
margin_right = 453.0
margin_bottom = 689.0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 24 )
expand = false

[node name="Product8" parent="Control" instance=ExtResource( 13 )]
margin_left = 948.0
margin_top = 181.0
margin_right = 1116.0
margin_bottom = 398.0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 21 )
expand = false

[node name="Product9" parent="Control" instance=ExtResource( 5 )]
margin_left = 671.0
margin_top = 271.0
margin_right = 860.0
margin_bottom = 382.0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 17 )
expand = false

[node name="Product10" parent="Control" instance=ExtResource( 12 )]
margin_left = 513.0
margin_top = 544.0
margin_right = 700.0
margin_bottom = 690.0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 16 )
expand = false
